--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ packages:
 extra-deps:
 - gloss-game-0.3.3.0
 - gloss-juicy-0.2.2
+- linear-1.20.7
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
